# stm32h750vb

./: CMakeLists.txt  README.md  prj.conf
boards/: Kconfig.defconfig.series  stm32h750.overlay
boards/st/stm32h750vbt6/: Kconfig.defconfig  Kconfig.stm32h750vbt6  board.cmake  board.yml  stm32h750vbt6.dts  stm32h750vbt6.yaml  stm32h750vbt6_defconfig
boards/st/stm32h750vbt6/doc/: index.rst
boards/st/stm32h750vbt6/support/: openocd.cfg
src/: app_main.c  bsp_errno.h  bsp_sd.c  bsp_sd.h  bsp_sdmmc.c  bsp_sdmmc.h  cpu_temp.c  cpu_temp.h  fs_nvs.c  fs_nvs.h  hal_adc.c  hal_gpio.c  hal_pwm.c  hal_pwm.h  hal_rtc.c  hal_rtc.h  hal_uart copy.c  hal_uart.c  hal_uart.h  qspi_flash.c  qspi_flash.h  sd_disk.c  sd_disk.h  soc_flash.c
